Add explanatory text to lessons

--- a/tibble/lesson.yaml
+++ b/tibble/lesson.yaml
@@ -64,8 +64,6 @@
   AnswerTests: any_of_exprs('as_tibble(airquality)', 'as_tibble(x = airquality)')
   Hint: Type as_tibble() with 'airquality' (without quotation marks) between the brackets.
 
-
-
 # Group test
 
 - Class: mult_question
@@ -167,7 +165,7 @@
 # Outro: what have we learnt?
 
 - Class: text
-  Output: 
+  Output: We've seen how to (1) convert data.frame-class objects to tibble-class objects with as_tibble(), (2) create tibbles with tibble(), tribble() and enframe(), and (3) and expanded a tibble with add_column() and add_row().
 
 # Outro: links
 
