--- a/tidyr/lesson.yaml
+++ b/tidyr/lesson.yaml
@@ -5,12 +5,17 @@
   Type: Standard
   Version: 2.4.3
 
+# Swirl info reminder
+
+- Class: text
+  Output: Reminder -- you can type info() at any time to see your options. For example, 'bye()' will exit Swirl.
+
 # Intro ---
 
 # Single sentence purpose
 
 - Class: text
-  Output: The {tidyr} package helps you organise your data frame to make it tidy.
+  Output: The {tidyr} package by Hadley Wickham and Lionel Henry helps you organise your data frame to make it tidy.
 
 # Short definition/expansion
 
